FEATURE: Big changes

--- a/templates/bulk_employee_upload.html
+++ b/templates/bulk_employee_upload.html
@@ -256,6 +256,7 @@
                     <li>Save your file as an Excel format (.xlsx or .xls)</li>
                     <li>Upload your completed file using the form below</li>
                     <li>Review the results and fix any errors if needed</li>
+                    <li><strong>Note:</strong> All employees will be automatically assigned the default shift (configurable in Settings)</li>
                 </ol>
                 
                 <div class="template-info">
